# slow-control

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml
examples/: slow_control_example.py
src/slow_control/: __init__.py  slow_control.py
src/slow_control/database/: database.py
src/slow_control/devices/: bronkhorst.py  caen.py  device.py  vsr53.py
src/slow_control/devices/serial/: __init__.py  vsr53usb.py
src/slow_control/measure/: bronkhorst.py  sensor.py  sensor_types.py  vsr53.py
test/: test_serial.py  test_slow_control.py
test/files/: devices.toml
